--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "bootstrap": "^5.3.3",
     "cloudinary": "^2.5.1",
     "firebase": "^11.0.2",
-    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
-    "react-quilljs": "^2.0.4",
     "react-router-dom": "^7.0.1",
+    "react-simple-wysiwyg": "^3.2.0",
     "react-spinners": "^0.15.0",
     "react-toastify": "^10.0.6",
     "react-type-animation": "^3.2.0",
