--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cloudinary": "^2.5.1",
     "firebase": "^11.0.2",
+    "material-ui-confirm": "^3.0.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
