--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.3",
     "cloudinary": "^2.5.1",
     "firebase": "^11.0.2",
+    "html-react-parser": "^5.2.1",
     "material-ui-confirm": "^3.0.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
